crates/reinhardt-core/macros/tests/ui/user/fail/missing_is_superuser.stderr
error: #[user] requires a field for 'is_superuser'. Add a field named 'is_superuser' or annotate a field with #[user_field(is_superuser)]
 --> tests/ui/user/fail/missing_is_superuser.rs:7:1
  |
7 | #[user(hasher = Argon2Hasher, username_field = "email")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `user` (in Nightly builds, run with -Z macro-backtrace for more info)
